# c17

./: .gitlab-ci.yml  CMakeLists.txt  README.md
01-hello/src/: hello.cxx
02-variables-constants/src/: variables-constants.cxx
03-pointers/src/: pointers.cxx
04-passing-arguments/src/: passing-arguments.cxx
05-namespaces/src/: namespaces.cxx
06-dot-product/src/: dot-product.cxx
07-dot-product-struct/src/: dot-product-struct.cxx
08-dot-product-struct2/src/: dot-product-struct2.cxx
09-copy-move/src/: copy-move.cxx
10-integration/src/: integration.cxx
11-polymorphism/src/: polymorphism.cxx
12-auto-decltype/src/: auto-decltype.cxx
13-templates/src/: templates.cxx
14-templates-partial-specialisation/src/: templates-partial-specialisation.cxx
15-traits/src/: traits.cxx
16-templates-sfinae/src/: templates-sfinae.cxx
17-templates-sfinae2/src/: templates-sfinae2.cxx
18-complex-conjugate/src/: complex-conjugate.cxx
19-templates-variadic/src/: templates-variadic.cxx
20-containers/src/: containers.cxx
21-algorithm/src/: algorithm.cxx
22-stack-queue/src/: stack-queue.cxx
H01-swap/: CMakeLists.txt  H01-swap.h
H01-swap/src/: swap.cxx
H02-arrays/: CMakeLists.txt
H03-reverse-engineering/: CMakeLists.txt
H03-reverse-engineering/src/: reverse-engineering.cxx
H04-points-triangles/: CMakeLists.txt
H05-copy-move/: H05 copy-move.h
H06-derivatives/: H06 Derivatives.h
H07-templates/: H07-templates.h
H08-unit-converter/: H08-unit-converter.h
H09-symbolic-differentiation/: H09-symbolic-diffrentiation.h
H10-add-vectors/: CMakeLists.txt
(+4 files in other folders)
